Fixed overflow at tablet index

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -7,15 +7,14 @@
   @media (min-width: $tablet-width) {
     grid-gap: 30px;
     width: 708px;
-    margin: 0 auto;
+    margin: -90px auto 0;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
     width: 1220px;
-    margin: 0 auto;
-    margin-bottom: 71px;
+    margin: -108px auto 0;
   }
 }
 
@@ -33,8 +32,7 @@
   @media (min-width: $tablet-width) {
     position: relative;
     display: grid;
-    grid-template-columns: 52px 1fr 1fr;
-    grid-template-rows: repeat(4, 60px);
+    grid-template-columns: 52px 340px 1fr;
     width: 708px;
     min-height: 372px;
 
@@ -59,8 +57,7 @@
   display: grid;
   grid-template-columns: min-content auto;
   column-gap: 15px;
-  margin-bottom: 23px;
-  padding-top: 20px;
+  padding: 20px 20px 20px;
   align-items: center;
   justify-content: center;
   font-family: $oswald400;
@@ -74,9 +71,10 @@
     grid-column: 2 / 3;
     display: block;
     text-align: left;
+    padding: 72px 0 0;
     font-size: 36px;
     line-height: 36px;
-    margin-top: 10px;
+    word-wrap: break-word;
   }
 
   @media (min-width: $desktop-width) {
@@ -101,7 +99,9 @@
 
   @media (min-width: $tablet-width) {
     background-size: inherit;
-    transform: translate(259px, 0);
+    right: 14%;
+    top: 22%;
+    transform: none;
   }
 
   @media (min-width: $desktop-width) {
@@ -122,9 +122,8 @@
     position: absolute;
     width: 200px;
     height: 200px;
-    right: 0;
-    bottom: 0;
-    transform: translate(-63px, -85px);
+    top: 25%;
+    right: 9%;
   }
 
   @media (min-width: $desktop-width) {
@@ -147,7 +146,9 @@
 
   @media (min-width: $tablet-width) {
     background-size: inherit;
-    transform: translate(155px, 58px);
+    right: 4%;
+    top: 36%;
+    transform: none;
   }
 
   @media (min-width: $desktop-width) {
@@ -168,9 +169,8 @@
     position: absolute;
     width: 200px;
     height: 200px;
-    right: 0;
-    bottom: 0;
-    transform: translate(-65px, -85px);
+    top: 25%;
+    right: 9%;
   }
 
   @media (min-width: $desktop-width) {
@@ -182,7 +182,8 @@
 }
 
 .features__about {
-  @include reset;
+  margin: 0;
+  padding: 20px;
   font-size: 14px;
   line-height: 18px;
   width: 240px;
@@ -190,8 +191,8 @@
 
   @media (min-width: $tablet-width) {
     grid-column: 2 / 3;
+    padding: 20px 0;
     width: 340px;
-    margin-top: 10px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -221,8 +222,7 @@
 }
 
 .features__link {
-  margin-bottom: 19px;
-  margin-top: 19px;
+  padding: 0 20px 20px;
   font-family: $oswald400;
   font-size: 16px;
   line-height: 16px;
@@ -232,7 +232,7 @@
   @media (min-width: $tablet-width) {
     grid-column: 2 / 3;
     grid-row: 4 / 5;
-    margin-top: 36px;
+    padding: 30px 0 53px;
     font-size: 20px;
     line-height: 30px;
   }
