--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -8,9 +8,10 @@
   width: 280px;
 
   @media (min-width: $tablet-width) {
-    width: 708px;
     display: grid;
-    margin-bottom: 506px;
+    margin-top: 52px;
+    width: 708px;
+
   }
 
   @media (min-width: $desktop-width) {
@@ -70,7 +71,7 @@
     display: block;
     width: 420px;
     min-height: 181px;
-    margin: 51px 88px 22px;
+    padding: 0 88px 20px;
     background: $color-default-white;
   }
 
@@ -94,7 +95,8 @@
   transform: translateY(170px);
 
   @media (min-width: $tablet-width) {
-    transform: translateY(379px);
+    position: static;
+    transform: translateY(-85px);
     background: $color-bg-white;
   }
 
@@ -147,18 +149,19 @@
 }
 
 .offer__button {
-  margin-top: 138px;
   width: 280px;
-  min-height: 40px;
+  padding: 10px 0;
+  margin: 138px 0 20px;
   font-size: 14px;
   line-height: 18px;
-  margin-bottom: 20px;
+  box-sizing: border-box;
+  word-break: break-word;
 
   @media (min-width: $tablet-width) {
     grid-row: 2 / 3;
     width: 244px;
-    min-height: 54px;
-    margin-left: 90px;
+    padding: 18px 0;
+    margin: 0 0 0 90px;
     margin-top: 0;
     font-size: 20px;
     line-height: 20px;
